--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,7 @@ body
     div.site
         div.prompts(hx-get="/prompts", hx-trigger="load", hx-swap="outerHTML")
         div.stage
+        div.display
 
     script(src="./htmx.min.js", type="text/javascript")
 </html>
