--- a/views/locus.pug
+++ b/views/locus.pug
@@ -1,7 +1,8 @@
-div.prompt
+div.stage
     h3= prompt.title
     div.promptmeat
         pre= prompt.prompt
     div.responses
         each response in responses
             button(hx-get="/responses/" + response.id, hx-target=".display")= response.id
+div.display
