--- a/views/response.pug
+++ b/views/response.pug
@@ -1,4 +1,4 @@
-div.response
-    h3= response.id
-    div.responsemeat
-        pre= response.text
+span.responsemeat= response.text
+    div.response
+        <!-- div in a span! it renders good in _my_ browser. -->
+        h3= response.id
