--- a/views/prompts.pug
+++ b/views/prompts.pug
@@ -1,5 +1,5 @@
 div.prompts
     h3 Prompts
     each prompt in prompts
-        button(hx-get="/locus/" + prompt.title, hx-target=".locus")= prompt.title
+        button(hx-get="/locus/" + prompt.title, hx-target=".locus")= prompt.title + (prompt.disabled == undefined ? '' : ' 💤')
 div.locus
