--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,7 @@ h1, h2, h3, * {
 }
 .prompts {
 }
-.prompts button {
+.prompts button, .responses button {
     display: block;
     width: 100%;
 }
